--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -6,6 +6,8 @@
   become: true
   when:
     - ansible_hostname in groups['unix']
+  notify:
+    - restart ssh
 - name: disable ssh root login
   replace:
     path: /etc/ssh/sshd_config
@@ -15,6 +17,8 @@
   when:
     - ansible_hostname in groups['unix']
     - ansible_hostname in groups['local']
+  notify:
+    - restart ssh
 - name: copy our public key to a remote host
   authorized_key:
     user: nihlaeth
