fixed change status of wp cli update

--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -10,6 +10,8 @@
 - name: update wp-cli
   command: wp cli update
   become: true
+  register: result
+  changed_when: '"WP-CLI is at the latest version." not in result.stdout'
   when:
     - ansible_hostname in groups['unix']
 - name: fetch wordpress plug-ins
