--- a/roles/screen/tasks/main.yml
+++ b/roles/screen/tasks/main.yml
@@ -24,3 +24,7 @@
       hardstatus alwayslastline
       hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %m-%d %{W} %c %{g}]'
       term xterm
+  become: true
+  when:
+    - ansible_hostname in groups['unix']
+    - ansible_hostname in groups['mine']
