nondestructively transfer vim settings

--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -24,29 +24,27 @@
     - ansible_hostname in groups['unix']
     - ansible_hostname in groups['mine']
   with_items:
-      - {'dest': 'syntastic', 'repo': 'git+ssh://git@github.com/scrooloose/syntastic'}
-      - {'dest': 'vim-abolish', 'repo': 'git+ssh://git@github.com/tpope/vim-abolish.git'}
-      - {'dest': 'vim-repeat', 'repo': 'git+ssh://git@github.com/tpope/vim-repeat'}
-      - {'dest': 'vim-dispatch', 'repo': 'git+ssh://git@github.com/tpope/vim-dispatch'}
-      - {'dest': 'vimoutliner', 'repo': 'git+ssh://git@github.com/vimoutliner/vimoutliner'}
-      - {'dest': 'vim-surround', 'repo': 'git+ssh://git@github.com/tpope/vim-surround'}
-      - {'dest': 'vim-test', 'repo': 'git+ssh://git@github.com/janko-m/vim-test'}
-      - {'dest': 'SimpylFold', 'repo': 'git+ssh://git@github.com/tmhedberg/SimpylFold'}
-      - {'dest': 'nerdcommenter', 'repo': 'git+ssh://git@github.com/scrooloose/nerdcommenter'}
-      - {'dest': 'molokai', 'repo': 'git+ssh://git@github.com/tomasr/molokai'}
-      - {'dest': 'indentpython.vim', 'repo': 'git+ssh://git@github.com/vim-scripts/indentpython.vim'}
-      - {'dest': 'nerdtree', 'repo': 'git+ssh://git@github.com/scrooloose/nerdtree'}
-      - {'dest': 'vim-airline', 'repo': 'git+ssh://git@github.com/vim-airline/vim-airline'}
-      - {'dest': 'vim-airline-themes', 'repo': 'git+ssh://git@github.com/vim-airline/vim-airline-themes'}
-      - {'dest': 'ctrlp.vim', 'repo': 'git+ssh://git@github.com/ctrlpvim/ctrlp.vim'}
-      - {'dest': 'vim-fugitive', 'repo': 'git+ssh://git@github.com/tpope/vim-fugitive'}
-      - {'dest': 'vim-pathogen', 'repo': 'git+ssh://git@github.com/tpope/vim-pathogen'}
-      - {'dest': 'vim-signify', 'repo': 'git+ssh://git@github.com/mhinz/vim-signify'}
-      - {'dest': 'vim-help-random', 'repo': 'git+ssh://git@github.com/motemen/vim-help-random'}
-      - {'dest': 'ultisnips', 'repo': 'git+ssh://git@github.com/SirVer/ultisnips'}
-      - {'dest': 'vim-snippets', 'repo': 'git+ssh://git@github.com/honza/vim-snippets'}
-      - {'dest': 'vim-lawrencium', 'repo': 'https://bitbucket.org/ludovicchabant/vim-lawrencium'}
-      - {'dest': 'Vim-Jinja2-Syntax', 'repo': 'git+ssh://git@github.com/Glench/Vim-Jinja2-Syntax'}
+    - {'dest': 'syntastic', 'repo': 'git+ssh://git@github.com/scrooloose/syntastic'}
+    - {'dest': 'vim-abolish', 'repo': 'git+ssh://git@github.com/tpope/vim-abolish.git'}
+    - {'dest': 'vim-repeat', 'repo': 'git+ssh://git@github.com/tpope/vim-repeat'}
+    - {'dest': 'vim-dispatch', 'repo': 'git+ssh://git@github.com/tpope/vim-dispatch'}
+    - {'dest': 'vimoutliner', 'repo': 'git+ssh://git@github.com/vimoutliner/vimoutliner'}
+    - {'dest': 'vim-surround', 'repo': 'git+ssh://git@github.com/tpope/vim-surround'}
+    - {'dest': 'vim-test', 'repo': 'git+ssh://git@github.com/janko-m/vim-test'}
+    - {'dest': 'SimpylFold', 'repo': 'git+ssh://git@github.com/tmhedberg/SimpylFold'}
+    - {'dest': 'nerdcommenter', 'repo': 'git+ssh://git@github.com/scrooloose/nerdcommenter'}
+    - {'dest': 'molokai', 'repo': 'git+ssh://git@github.com/tomasr/molokai'}
+    - {'dest': 'indentpython.vim', 'repo': 'git+ssh://git@github.com/vim-scripts/indentpython.vim'}
+    - {'dest': 'nerdtree', 'repo': 'git+ssh://git@github.com/scrooloose/nerdtree'}
+    - {'dest': 'vim-airline', 'repo': 'git+ssh://git@github.com/vim-airline/vim-airline'}
+    - {'dest': 'vim-airline-themes', 'repo': 'git+ssh://git@github.com/vim-airline/vim-airline-themes'}
+    - {'dest': 'ctrlp.vim', 'repo': 'git+ssh://git@github.com/ctrlpvim/ctrlp.vim'}
+    - {'dest': 'vim-fugitive', 'repo': 'git+ssh://git@github.com/tpope/vim-fugitive'}
+    - {'dest': 'vim-pathogen', 'repo': 'git+ssh://git@github.com/tpope/vim-pathogen'}
+    - {'dest': 'vim-signify', 'repo': 'git+ssh://git@github.com/mhinz/vim-signify'}
+    - {'dest': 'vim-help-random', 'repo': 'git+ssh://git@github.com/motemen/vim-help-random'}
+    - {'dest': 'vim-lawrencium', 'repo': 'https://bitbucket.org/ludovicchabant/vim-lawrencium'}
+    - {'dest': 'Vim-Jinja2-Syntax', 'repo': 'git+ssh://git@github.com/Glench/Vim-Jinja2-Syntax'}
 - name: install pylint
   pip:
     name: pylint
@@ -71,6 +69,8 @@
     - ansible_hostname in groups['mine']
   with_items:
     - {'dest': 'YouCompleteMe', 'repo': 'git+ssh://git@github.com/Valloric/YouCompleteMe'}
+    - {'dest': 'ultisnips', 'repo': 'git+ssh://git@github.com/SirVer/ultisnips'}
+    - {'dest': 'vim-snippets', 'repo': 'git+ssh://git@github.com/honza/vim-snippets'}
 - name: "delete vim 8 plugins"
   file:
     path: "/etc/vim/bundle/{{ item }}"
@@ -78,17 +78,10 @@
   become: true
   with_items:
     - YouCompleteMe
+    - ultisnips
+    - vim-snippets
   when:
     - vim8.rc != 0
-    - ansible_hostname in groups['unix']
-    - ansible_hostname in groups['mine']
-- name: write vim config
-  template:
-    src: "vimrc.j2"
-    backup: yes
-    dest: "/etc/vim/vimrc"
-  become: true
-  when:
     - ansible_hostname in groups['unix']
     - ansible_hostname in groups['mine']
 - name: transfer vim snippets
@@ -99,13 +92,29 @@
   with_items:
     - snipps
   when:
+    - vim8.rc != 0
     - ansible_hostname in groups['unix']
     - ansible_hostname in groups['mine']
-- name: transfer user vimrc
-  copy:
-    src: vimrc
+- set_fact:
+    vimrc_content: "{{ lookup('template', 'templates/vimrc.j2') }}"
+- name: write vim config
+  blockinfile:
+    dest: "/etc/vim/vimrc"
+    content: '{{ vimrc_content }}'
+    state: present
+    create: yes
+    marker: '" {mark} ANSIBLE MANAGED BLOCK'
+  become: true
+  when:
+    - ansible_hostname in groups['unix']
+    - ansible_hostname in groups['mine']
+- name: fix user vimrc
+  lineinfile:
     dest: "~/.vimrc"
-    force: no
+    create: yes
+    insertbefore: BOF
+    line: "source /etc/vim/vimrc"
+    state: present
   become: true
   become_user: "{{ item }}"
   with_items:
