--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -76,13 +76,17 @@
     - "{{ managed_users }}"
     - "{{ ssh_pub_key.results }}"
   ignore_errors: yes
+- set_fact:
+    sshconfig_content: "{{ lookup('template', 'templates/config.j2') }}"
 - name: write ssh config
-  template:
-    src: config.j2
-    backup: yes
+  blockinfile:
     dest: ~/.ssh/config
+    content: '{{ sshconfig_content }}'
+    state: present
+    create: yes
+    marker: '# {mark} ANSIBLE MANAGED BLOCK'
+    insertbefore: BOF
     mode: 0700
-    owner: "{{ item }}"
   become_user: "{{ item }}"
   become: true
   when:
